# elysium_server

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
dev/: config.toml  public-key.pem  run-db.sh
dummy-data/: private-key.pem
scripts/: dev-server.py  run-mailhog.py  start-db.py
scripts/test_db/: 000167.sst  000175.sst  000185.sst  IDENTITY  LOG.old.1757935181032547  MANIFEST-000181  OPTIONS-000173
src/: auth.rs  cfg.rs  chat.rs  config.rs  connect_info.rs  database.rs  email.rs  error.rs  main.rs  resource.rs  server.rs  service.rs  state.rs  templates.rs  testing.rs  time.rs  trace.rs  user.rs  utils.rs
src/api/: auth.rs  comment.rs  mod.rs  post.rs  user.rs
src/grpcs/post/: author.rs  create.rs  delete.rs  get.rs  mod.rs  recommend.rs
src/grpcs/user/: auth.rs  create.rs  delete.rs  edit.rs  follow.rs  mod.rs
src/grpcs/user/verify/: email.rs
src/services/: chat.rs  general.rs  mod.rs  resource.rs  user.rs
src/tests/: chat.rs  mod.rs  user.rs
templates/: verify_email.html
