cargo-features = ["profile-rustflags"]

[package]
name = "elysium_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "fs", "time", "signal", "parking_lot"] }

tracing = { version = "0.1.44", features = ["max_level_info"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["std", "ansi", "fmt"] }

tonic = { version = "0.14.5", default-features = false, features = ["server", "router"] }
tonic-reflection = "0.14.5"

surrealdb = "3.0.4"

jsonwebtoken = "10.3.0"
argon2 = "0.6.0-rc.8"
nanoid = "0.4.0"

boml = "2.0.0"

elysium_rust = { git = "https://github.com/elysium-net/elysium_proto.git" }
